# websec-sandbox-diploma

./: .gitignore  .pre-commit-config.yaml  README.md  s  s.py
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6759b2ca3338_initial_migration_create_users_table.py  bc71db29d2de_add_user_progress_table.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  security.py
backend/app/crud/: users.py
backend/app/models/: User.py  UserProgress.py
backend/app/routers/: auth.py  sandbox.py  users.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: user_service.py
backend/backend.egg-info/: PKG-INFO
frontend/: .eslintrc.cjs  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.scss  main.tsx
frontend/src/app/: index.tsx
frontend/src/components/layout/LauncherWindow/: LauncherWindow.tsx
frontend/src/components/ui/Button/: Button.tsx
frontend/src/entities/sandbox/: api.ts  types.ts
frontend/src/entities/user/: api.ts  index.ts  model.ts  types.ts
frontend/src/features/auth/LoginForm/: LoginForm.module.scss  LoginForm.tsx
frontend/src/features/auth/RegisterForm/: RegisterForm.tsx
frontend/src/features/profile/: UserProfile.tsx
frontend/src/features/sandbox/: index.ts
frontend/src/pages/AuthPage/: AuthPage.tsx
frontend/src/pages/ProfilePage/: ProfilePage.tsx
frontend/src/pages/SandboxPage/: SandboxPage.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/ui/: index.ts
(+7 files in other folders)
